# cgraph

./: .travis.yml  CMakeLists.txt  main.cpp  readme.md
bal/base/: binarytreeindex.hpp  container.hpp  containerindex.hpp  variables.hpp
bal/cnf/: cnf.cpp  cnf.hpp  cnfclauses.hpp  dimacs.hpp  graphml.hpp
bal/io/: streamable.hpp  textreader.hpp
bal/utils/: fileutils.hpp
bal/variables/: variablesarray.hpp  variablesio.cpp  variablesio.hpp
